err/googleappenginemapreduce.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GoogleAppEngineCloudStorageClient-1.9.22.1.egg-info'...
Listing './lib/python3.5/site-packages/GoogleAppEngineMapReduce-1.9.22.0.egg-info'...
Listing './lib/python3.5/site-packages/GoogleAppEnginePipeline-1.9.22.1.egg-info'...
Listing './lib/python3.5/site-packages/Graphy-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/cloudstorage'...
Compiling './lib/python3.5/site-packages/cloudstorage/api_utils.py'...
***   File "./lib/python3.5/site-packages/cloudstorage/api_utils.py", line 173
    except self.retriable_exceptions, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudstorage/rest_api.py'...
***   File "./lib/python3.5/site-packages/cloudstorage/rest_api.py", line 248
    except app_identity.InternalError, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cloudstorage/storage_api.py'...
***   File "./lib/python3.5/site-packages/cloudstorage/storage_api.py", line 129
    except urlfetch.DownloadError, e:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/graphy'...
Listing './lib/python3.5/site-packages/graphy/backends'...
Listing './lib/python3.5/site-packages/graphy/backends/google_chart_api'...
Compiling './lib/python3.5/site-packages/graphy/backends/google_chart_api/pie_chart_test.py'...
***   File "./lib/python3.5/site-packages/graphy/backends/google_chart_api/pie_chart_test.py", line 125
    self.chart = self.GetChart([1000000000000000L,3000000000000000L],
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapreduce'...
Listing './lib/python3.5/site-packages/mapreduce/api'...
Listing './lib/python3.5/site-packages/mapreduce/api/map_job'...
Compiling './lib/python3.5/site-packages/mapreduce/api/map_job/abstract_datastore_input_reader.py'...
***   File "./lib/python3.5/site-packages/mapreduce/api/map_job/abstract_datastore_input_reader.py", line 277
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/api/map_job/model_datastore_input_reader.py'...
***   File "./lib/python3.5/site-packages/mapreduce/api/map_job/model_datastore_input_reader.py", line 94
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/base_handler.py'...
***   File "./lib/python3.5/site-packages/mapreduce/base_handler.py", line 221
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/context.py'...
***   File "./lib/python3.5/site-packages/mapreduce/context.py", line 157
    except db.Timeout, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/handlers.py'...
***   File "./lib/python3.5/site-packages/mapreduce/handlers.py", line 372
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/input_readers.py'...
***   File "./lib/python3.5/site-packages/mapreduce/input_readers.py", line 457
    except db.NeedIndexError, why:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapreduce/lib'...
Listing './lib/python3.5/site-packages/mapreduce/lib/input_reader'...
Compiling './lib/python3.5/site-packages/mapreduce/lib/input_reader/_gcs.py'...
***   File "./lib/python3.5/site-packages/mapreduce/lib/input_reader/_gcs.py", line 171
    except ValueError, error:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/mapreduce_pipeline.py'...
***   File "./lib/python3.5/site-packages/mapreduce/mapreduce_pipeline.py", line 210
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapreduce/operation'...
Compiling './lib/python3.5/site-packages/mapreduce/output_writers.py'...
***   File "./lib/python3.5/site-packages/mapreduce/output_writers.py", line 569
    except ValueError, error:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/property_range.py'...
***   File "./lib/python3.5/site-packages/mapreduce/property_range.py", line 283
    except UnicodeEncodeError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/records.py'...
***   File "./lib/python3.5/site-packages/mapreduce/records.py", line 119
    return (((crc >> 15) | (crc << 17)) + _CRC_MASK_DELTA) & 0xFFFFFFFFL
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapreduce/static'...
Compiling './lib/python3.5/site-packages/mapreduce/status.py'...
***   File "./lib/python3.5/site-packages/mapreduce/status.py", line 224
    except (ValueError, yaml_errors.EventError), e:
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapreduce/test_support.py'...
***   File "./lib/python3.5/site-packages/mapreduce/test_support.py", line 198
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapreduce/third_party'...
Compiling './lib/python3.5/site-packages/mapreduce/third_party/crc32c.py'...
***   File "./lib/python3.5/site-packages/mapreduce/third_party/crc32c.py", line 21
    0x00000000L, 0xf26b8303L, 0xe13b70f7L, 0x1350f3f4L,
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapreduce/tools'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/mox-0.5.3.egg-info'...
Compiling './lib/python3.5/site-packages/mox.py'...
***   File "./lib/python3.5/site-packages/mox.py", line 1232
    raise NotImplementedError, 'method must be implemented by a subclass.'
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pipeline'...
Compiling './lib/python3.5/site-packages/pipeline/__init__.py'...
***   File "./lib/python3.5/site-packages/pipeline/__init__.py", line 42
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pipeline/pipeline.py'...
***   File "./lib/python3.5/site-packages/pipeline/pipeline.py", line 581
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pipeline/status_ui.py'...
***   File "./lib/python3.5/site-packages/pipeline/status_ui.py", line 143
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pipeline/ui'...
Listing './lib/python3.5/site-packages/pipeline/ui/images'...
Compiling './lib/python3.5/site-packages/pipeline/util.py'...
***   File "./lib/python3.5/site-packages/pipeline/util.py", line 116
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
